# OpenWorkoutTracker

./: .gitignore  .gitmodules  .travis.yml  App.entitlements  Bridging-Header.h  CNAME  Exert.entitlements  LICENSE  OpenWorkoutTracker Watch App.entitlements  OpenWorkoutTracker-Info.plist  OpenWorkoutTracker-Watch-App-Info.plist  OpenWorkoutTracker.entitlements  Readme.md  Straen.entitlements  TestPlan.xctestplan  Urls.h  WatchSession.swift
.github/: FUNDING.yml  issue_template.md
Activities/: Activity.cpp  Activity.h  ActivityAttribute.h  ActivityAttributeType.h  ActivityFactory.cpp  ActivityFactory.h  ActivityMgr.h  ActivityMgr.mm  ActivityName.h  ActivitySummary.h  ActivityType.h  ActivityViewType.h  AxisName.h  BenchPress.cpp  BenchPress.h  BenchPressAnalyzer.cpp  BenchPressAnalyzer.h  BikePlanGenerator.cpp  BikePlanGenerator.h  CMakeLists.txt  Callbacks.h  ChinUp.cpp  ChinUp.h  ChinUpAnalyzer.cpp  ChinUpAnalyzer.h  Cycling.cpp  Cycling.h  DayType.h  EdgeDirection.h  ExperienceLevel.h  FtpCalculator.cpp  FtpCalculator.h  GForceAnalyzer.cpp  GForceAnalyzer.h  GForceAnalyzerFactory.cpp  GForceAnalyzerFactory.h  Goal.h  GoalType.h  GraphLine.h  GraphPeak.h  (+88 more)
ActivityComplications/: ActivityComplications.swift
ActivityWidgets/: ActivityVM.swift  ActivityWidgets.swift  ActivityWidgetsBundle.swift  ActivityWidgetsLiveActivity.swift
Bike/: Bike.h
Cloud/Strava/: Strava.h  (+1 more)
Common/: ActivityMatch.h  Cookies.h  Defines.h  Notifications.h  Params.h  Urls.h  WatchMessages.h
Data/: DataExporter.cpp  DataExporter.h  DataImporter.cpp  DataImporter.h  Database.cpp  Database.h  HeatMapGenerator.cpp  HeatMapGenerator.h  WorkoutImporter.cpp  WorkoutImporter.h
Docs/: Architecture.key
Exert.xcodeproj/: project.pbxproj
FileLib/: CsvFileWriter.cpp  CsvFileWriter.h  File.cpp  File.h  FileFormat.h  FitFileWriter.cpp  FitFileWriter.h  GpxFileReader.cpp  GpxFileReader.h  GpxFileWriter.cpp  GpxFileWriter.h  GpxTags.h  KmlFileReader.cpp  KmlFileReader.h  TcxFileReader.cpp  TcxFileReader.h  TcxFileWriter.cpp  TcxFileWriter.h  TcxTags.h  TextFileReader.cpp  TextFileReader.h  XmlFileReader.cpp  XmlFileReader.h  XmlFileWriter.cpp  XmlFileWriter.h  ZwoFileReader.cpp  ZwoFileReader.h  ZwoFileWriter.cpp  ZwoFileWriter.h  ZwoTags.h  ZwoTypes.h
Gear/: Bike.h  ServiceHistory.h  Shoes.h
IOS/: App-Info.plist  App-Prefix.pch  main.m
Images/: Arrow.pxm  Background.pxm  Broadcasting.pxm  Countdown.pxm  Cycling.pxm  Default-568h@2x.pxm  Default@2x.pxm  Duathlon.pxm  Hiking.pxm  Icon.pxm  Rest.pxm  Running.pxm  Swimming.pxm  Threat.pxm  Triathlon.pxm  Wheel.pxm
Intents/: AppShortcuts.swift  LapIntent.swift  MyStartWorkoutIntent.swift
OpenWorkoutTracker-Swift.xcodeproj/: project.pbxproj
OpenWorkoutTracker-objc.xcodeproj/: project.pbxproj.rej
OpenWorkoutTracker.xcodeproj/: project.pbxproj
Sensors/: SensorStyle.h
Settings.bundle/: Profile.plist  Root.plist
Shoes/: Shoes.h
Sounds/: Beep.aif  Bell.aif  BrightBeep.aif  Ping.aif
Straen.xcodeproj/: project.pbxproj
Test/: GpxImportTest.h  GpxImportTest.m  PeakFindTest.h  PeakFindTest.m  UnitTests.txt  WorkoutsTest.h  WorkoutsTest.m  runkeeper.py
Tests/: BaseTest.h  BaseTest.m  Downloader.swift  FitExportTest.m  FitTests.swift  GpxImportTest.m  GpxTests.swift  GradientTests.swift  OpenWorkoutTrackerTests.swift  PeakFindTest.m  PeakFindingTests.swift  TcxImportTest.m  TcxTests.swift  TestPlan.xctestplan  Tests.m  WorkoutPlanTest.m  ZwoImportTest.m  main.m
UITests/: OpenWorkoutTrackerUITests.swift  OpenWorkoutTrackerUITestsLaunchTests.swift
Units/: Coordinate.h  CoordinateCalculator.cpp  CoordinateCalculator.h  UnitConversionFactors.h  UnitConverter.cpp  UnitConverter.h  UnitSystem.h
User/: ActivityLevel.h  BmrFormula.h  Gender.h  User.cpp  User.h
View Models/: ActivitiesVM.swift  FriendsVM.swift  GearVM.swift  HistoryVM.swift  IntervalSessionsVM.swift  LiveActivityVM.swift  PacePlansVM.swift  ProfileVM.swift  RoutesVM.swift  StoredActivityVM.swift  WorkoutsVM.swift  ZonesVM.swift
Watch/: Info.plist
Watch App/: AboutView.swift  ActivityView.swift  ComplicationViews.swift  ContentView.swift  HistoryDetailsView.swift  HistoryView.swift  SettingsView.swift  WatchApp.swift
Watch AppTests/: OpenWorkoutTracker_Watch_AppTests.swift
Watch AppUITests/: OpenWorkoutTracker_Watch_AppUITests.swift  OpenWorkoutTracker_Watch_AppUITestsLaunchTests.swift
Watch Extension/: DetailsViewController.h  DetailsViewController.m  ExtensionDelegate.h  ExtensionDelegate.m  Info.plist  InterfaceController.h  InterfaceController.m  NotificationController.h  NotificationController.m  PushNotificationPayload.apns  WatchAboutViewController.h  WatchAboutViewController.m  WatchActivityViewController.h  WatchActivityViewController.m  WatchDetailsViewController.h  WatchDetailsViewController.m  WatchHistoryViewController.h  WatchHistoryViewController.m  WatchIntervalsViewController.h  WatchIntervalsViewController.m  WatchSessionManager.h  WatchSessionManager.m  WatchSettingsViewController.h  WatchSettingsViewController.m
WatchKit App/: Info.plist
WatchKit Extension/: Info.plist  InterfaceController.h  InterfaceController.m  NotificationController.h  NotificationController.m
android/: settings.gradle
iPhone App/: AboutView.swift  ActivityPreferencesView.swift  ActivityView.swift  BarChartView.swift  CommonView.swift  ContentView.swift  CreateLoginView.swift  DebugView.swift  DocumentPicker.swift  EditBikeView.swift  EditIntervalSessionView.swift  EditPacePlanView.swift  EditRouteView.swift  EditShoesView.swift  GearServiceItemView.swift  GearView.swift  HistoryDetailsView.swift  HistoryView.swift  ImportRouteView.swift  IntervalSessionsView.swift  Launch Screen.storyboard  LineGraphView.swift  LoginView.swift  MapWithPolyline.swift  NewIntervalSessionView.swift  NewPacePlanView.swift  NumbersOnly.swift  PacePlansView.swift  PhoneApp.swift  PhotoPicker.swift  ProfileView.swift  RoutesView.swift  SelectFileView.swift  SensorChartView.swift  SensorsView.swift  SettingsView.swift  SplitsView.swift  StatisticsView.swift  TagsView.swift  WorkoutDetailsView.swift  (+2 more)
(+359 files in other folders)
